Code cleanup: use modern factory methods
* Replace Collections.emptyList() with List.of()
* Replace Collections.emptyMap() with Map.of()
* Remove several "empty" javadocs

Part of #107